# DepthSenseGrabberOpenCV

./: CMakeLists.txt  DepthSenseGrabberCore.cxx  DepthSenseGrabberCore.hxx  DepthSenseGrabberOpenCV.cxx  README.md  command_to_compile_depthsense.txt
DepthSenseGrabberOpenCV/: DepthSenseGrabberOpenCV.cxx
Optional Makefile/: Makefile
